index file updated

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<section class="download-section">
 			<div class="container download-content">
 				<h3>Explore our full lineup of refreshing, handcrafted blends</h3>
-				<a href="menu.pdf" class="download-btn" download>Download Menu</a>
+				<a href="#" class="download-btn" download>Download Menu</a>
 			</div>
 		</section>
 		<!-- Footer Section -->
@@ -105,7 +105,7 @@
 						Mumbai: 400080. Maharashtra. India.</p>
 					<p>Phone: +91 9833 610 808<br>Email: info@ksampann.in</p>
 					<!-- Instagram icon (round, same style as call icon) -->
-					<a href="https://www.instagram.com" target="_blank" class="footer-icon">
+					<a href="#" class="footer-icon">
 						<i class="fab fa-instagram"></i>
 					</a>
 				</div>
