social media icon added in footer

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 			<div class="container">
 				<div class="hero-content">
 					<h1>From Roots to Refreshment, Our Beverage Journey</h1>
-					<p>What began as a humble dream in our parents' small kitchen has grown into a vibrant legacy built on taste, tradition, and innovation.</p>
-					<p>Years ago, our parents, driven by a passion for authentic flavors and natural ingredients, started a small-scale beverage business. With simple tools, time-honored recipes, and a deep love for Indian taste traditions, they handcrafted syrups and concentrates that quickly became local favorites.</p>
-					<p>Their signature blends, especially the zesty Nimbu Ginger, tangy Lemon Masala, and tropical Pink Peru, captured the hearts of families looking for refreshing and nostalgic flavors.</p>
-					<p>Now, as the next generation—a brother-sister duo with unwavering dedication, they were joined by a few close, precious friends as extended family—who believed in the vision. Together, they poured passion, trust, and innovation into every bottle, giving birth to a renewed brand with a modern heartbeat and traditional soul.—we are proud to carry the torch forward. Inspired by our parents’ dedication and guided by modern innovation, we are taking the brand to new heights.
+					<p>What began as a humble dream in our parents' small kitchen has grown into a vibrant legacy built on taste, tradition, &amp; innovation.</p>
+					<p>Years ago, our parents, driven by a passion for authentic flavors &amp; natural ingredients, started a small-scale beverage business. With simple tools, time-honored recipes, &amp; a deep love for Indian taste traditions, they handcrafted syrups &amp; concentrates that quickly became local favorites.</p>
+					<p>Their signature blends, especially the zesty Nimbu Ginger, tangy Lemon Masala, &amp; tropical Pink Peru, captured the hearts of families looking for refreshing &amp; nostalgic flavors.</p>
+					<p>Now, as the next generation—a brother-sister duo with unwavering dedication, they were joined by a few close, precious friends as extended family—who believed in the vision. Together, they poured passion, trust, &amp; innovation into every bottle, giving birth to a renewed brand with a modern heartbeat &amp; traditional soul.—we are proud to carry the torch forward. Inspired by our parents’ dedication &amp; guided by modern innovation, we are taking the brand to new heights.
 					</p>
-					<p>We've introduced a line of Ready-to-Serve (RTS) beverages crafted from the same treasured recipes, perfect for today’s fast-paced lifestyle without compromising on purity or taste. Alongside, our range of concentrates continues to empower homes, cafes, and businesses to serve quality drinks with ease and authenticity.
+					<p>We've introduced a line of Ready-to-Serve (RTS) beverages crafted from the same treasured recipes, perfect for today’s fast-paced lifestyle without compromising on purity or taste. Alongside, our range of concentrates continues to empower homes, cafes, &amp; businesses to serve quality drinks with ease &amp; authenticity.
 					</p>
 					<p>Together, we're not just building a business.</p>
 					<p>We're bottling memories.</p>
 					<p>We're refreshing legacies.</p>
-					<p>We're raising a toast to family, flavor, and the future</p>
+					<p>We're raising a toast to family, flavor, &amp; the future</p>
 				</div>
 			</div>
 		</section>
@@ -51,8 +51,9 @@
 				</div>
 				<!-- Right text -->
 				<div class="parallax-text">
-					<h2>Fresh from the Farm</h2>
-					<p>We use hand-picked fruits directly sourced from organic farms to make sure your juice is as fresh as nature intended.</p>
+					<h2>Lemon Masala</h2>
+					<p class="sub-title">Masala that pops. Lemon that zings</p>
+					<p>Zesty and chatpata, this mix of lemon, mint, ginger, and classic Indian masalas brings the flavor full throttle. It's sweet, salty, and full of spice, your taste buds won’t know what hit them.</p>
 				</div>
 			</div>
 		</section>
@@ -63,8 +64,9 @@
 					<img src="images/bottle-1a.png" alt="Juice Bottle 2" />
 				</div>
 				<div class="parallax-text">
-					<h2>Natural Goodness</h2>
-					<p>No added sugar, no preservatives — just 100% real fruit juice that your body will thank you for.</p>
+					<h2>Nimbu Ginger</h2>
+					<p class="sub-title">The glow-up of nimbu paani</p>
+					<p>Lemon meets ginger with a salty twist. This bold remix of your childhood cooler is sharp, clean, and extra refreshing. No frills, just that fresh-tasting kick you didn’t know you needed.</p>
 				</div>
 			</div>
 		</section>
@@ -75,8 +77,9 @@
 					<img src="images/bottle-3a.png" alt="Juice Bottle 3" />
 				</div>
 				<div class="parallax-text">
-					<h2>Three Signature Flavors</h2>
-					<p>We offer three specially crafted juices — each with its own unique taste and benefits. Pick your favorite!</p>
+					<h2>Pink Peru</h2>
+					<p class="sub-title">Pink’s not just a color. It’s a mood</p>
+					<p>Juicy. Tangy. Kinda fancy. Made from real peru pulp, this one hits different. Sweet, salty, slightly tart, it’s your chill drink for sunny days and slow afternoons. Packed with pulp, not preservatives.</p>
 				</div>
 			</div>
 		</section>
@@ -93,21 +96,30 @@
 				<!-- Left column: Company profile -->
 				<div class="footer-left">
 					<h3>About Kumud Sampann</h3>
-					<p>We believe the foundation of any great business is care. Care for people, for quality, and for growth. We are more than just a company. We are a family of brands that bring health, comfort, and inspiration into everyday life.</p>
+					<p>We believe the foundation of any great business is care. Care for people, for quality, &amp; for growth. We are more than just a company. We are a family of brands that bring health, comfort, &amp; inspiration into everyday life.</p>
 					<!-- FSSAI logo placeholder -->
 					<img src="images/fssai-logo.png" alt="FSSAI Logo" class="fssai-logo" />
 				</div>
-				<!-- Right column: Contact and Instagram -->
+				<!-- Right column: Contact &amp; Instagram -->
 				<div class="footer-right">
 					<h3>Contact Us</h3>
 					<p>Kumud Sampann Pvt Ltd <br>
 						Sumangal Veena, B. R Rd. Mulund West <br>
-						Mumbai: 400080. Maharashtra. India.</p>
+					Mumbai: 400080. Maharashtra. India.</p>
 					<p>Phone: +91 9833 610 808<br>Email: info@ksampann.in</p>
-					<!-- Instagram icon (round, same style as call icon) -->
-					<a href="#" class="footer-icon">
-						<i class="fab fa-instagram"></i>
-					</a>
+					
+					<!-- Social Icons -->
+					<div class="social-icons">
+						<a href="#" class="social-icon">
+							<i class="fab fa-instagram"></i>
+						</a>
+						<a href="#" class="social-icon">
+							<i class="fab fa-facebook-f"></i>
+						</a>
+						<a href="#" class="social-icon">
+							<i class="fab fa-linkedin-in"></i>
+						</a>
+					</div>
 				</div>
 			</div>
 		</footer>
